--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head lang="en">
-        <title>Currency Calculator</title>
+        <title>My apps</title>
         <link rel="stylesheet" href="currency.css">
         <script src="currency.js"></script>
     </head>
     <body>
-        <h1>Currency Converter</h1>
-        <div class="currency">
-            <select name="fromCurrency" id="fromCurrency"></select>
-            <input type="number" id="fromNumber" value="1">
-        </div>
-        <div class="currency">
-            <select name="toCurrency" id="toCurrency"></select>
-            <input type="number" id="toNumber">
-        </div>
+        <h1>My Apps</h1>
+        <h2><a href="currency.html">Currency Converter</a></h2>
     </body>
 </html>
