--- a/hldm.html
+++ b/hldm.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poker Game</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="static/styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
 <div id="game-container">
     <!-- Game content here -->
 </div>
-<script src="game.js"></script>
+<script src="static/scrypt.js"></script>
 </body>
 </html>
