--- a/hldm.html
+++ b/hldm.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poker Game</title>
     <link rel="stylesheet" href="static/styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="static/scrypt.js"></script>
 </head>
 <body>
-<div id="game-container">
-    <!-- Game content here -->
-</div>
-<script src="static/scrypt.js"></script>
+    <div class="top-row">
+        <div class="days-played" data-label="DAYS PLAYED">0</div>
+        <div class="daily-bonus" data-label="DAYLY BONUS">
+            <span class="coin-gray" data-symbol="&#9881;">101</span>
+        </div>
+        <div class="bankroll" data-label="BANKROLL">
+            <span class="coin-gold" data-symbol="&#9881;">101</span>
+        </div>
+    </div>
+    <div class="middle-row">
+        <button class="poker-table-button">Find me a game!</button>
+    </div>
+    <div class="bottom-row">
+        <div class="menu-symbol">&#9776;</div>
+        <button class="invite-friend-button">Invite Friend</button>
+    </div>
 </body>
 </html>
