--- a/hldm.html
+++ b/hldm.html
@@ -23,7 +23,7 @@
     </div>
     <div class="bottom-row">
         <div class="menu-symbol">&#9776;</div>
-        <button id="invite-friend-button" class="invite-friend-button">Invite Friend</button>
+        <button id="invite-friend-button" class="invite-friend-button" onclick="openInvitePage()">Invite Friend</button>
     </div>
 </body>
 </html>
