--- a/hldm.html
+++ b/hldm.html
@@ -6,7 +6,7 @@
     <title>Poker Game</title>
     <link rel="stylesheet" href="static/styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <script src="static/scrypt.js"></script>
+    <script src="static/script.js"></script>
 </head>
 <body>
     <div class="top-row">
